# prox-sync

./: .env.example  .gitignore  README.md  pyproject.toml  setup.sh
sync/: config.py  diff.py  engine.py  logger.py  main.py  models.py  npm.py  parser.py  pihole.py  proxmox.py
systemd/: proxmox-sync.service  proxmox-sync.timer
tests/: conftest.py  test_diff.py  test_engine.py  test_parser.py  test_pihole.py  test_proxmox.py
