[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prox-sync"
version = "0.1.0"
description = "Sync Proxmox LXC services to Pi-hole DNS and Nginx Proxy Manager"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "mypy>=1.15",
    "ruff>=0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["sync"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
